Restructured portfolio website

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Godservant Emmanuel - DevOps Engineer</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -16,39 +18,42 @@
         <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="#resume">Resume</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
     <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Welcome to my portfolio! I am a Junior DevOps engineer with experience in Docker, CI/CD pipelines, and cloud platforms like AWS, GCP. Passionate about automation, infrastructure-as-code, and improving software delivery. Eager to contribute and improve my skills in a real-world DevOps team.</p>
-        </section>
+        <div class="container">
+            <section id="about">
+                <h2><i class="fas fa-user"></i> About Me</h2>
+                <p>Welcome to my portfolio! I am a Junior DevOps engineer with experience in Docker, CI/CD pipelines, and cloud platforms like AWS, GCP. Passionate about automation, infrastructure-as-code, and improving software delivery. Eager to contribute and improve my skills in a real-world DevOps team.</p>
+            </section>
 
-        <section id="projects">
-            <h2>Projects</h2>
-            <div class="project">
-                <h3>Project 1</h3>
-                <p>My Docker App.</p>
-                <a href="https://github.com/lordemmag-devops/my-docker-app" target="_blank">View Project on GitHub</a>
-            </div>
-            <div class="project">
-                <h3>Project 2</h3>
-                <p>CI/CD with github actions.</p>
-                <a href="https://github.com/lordemmag-devops/CI-CD-With-Github-Actions" target="_blank">View Project on GitHub</a>
-            </div>
-        </section>
+            <section id="projects">
+                <h2><i class="fas fa-code"></i> Projects</h2>
+                <div class="project">
+                    <h3>Project 1</h3>
+                    <p>My Docker App.</p>
+                    <a href="https://github.com/lordemmag-devops/my-docker-app" target="_blank">View Project on GitHub</a>
+                </div>
+                <div class="project">
+                    <h3>Project 2</h3>
+                    <p>CI/CD with github actions.</p>
+                    <a href="https://github.com/lordemmag-devops/CI-CD-With-Github-Actions" target="_blank">View Project on GitHub</a>
+                </div>
+            </section>
 
-        <section id="resume">
-            <h2>My Resume</h2>
-            <p><a href="Godservant_Emmanuel_Resume.pdf" target="_blank">View My Resume</a></p>
-        </section>
+            <section id="resume">
+                <h2><i class="fas fa-file-pdf"></i> My Resume</h2>
+                <p><a href="Godservant_Emmanuel_Resume.pdf" target="_blank">View My Resume</a></p>
+            </section>
 
-        <section id="contact">
-            <h2>Contact Me</h2>
-            <p>You can reach me at <a href="mailto:emmanuelgodservant7@gmail.com">emmanuelgodservant7@gmail.com</a></p>
-        </section>
+            <section id="contact">
+                <h2><i class="fas fa-envelope"></i> Contact Me</h2>
+                <p>You can reach me at <a href="mailto:emmanuelgodservant7@gmail.com">emmanuelgodservant7@gmail.com</a></p>
+            </section>
+        </div>
     </main>
 
     <footer>
